--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -18,39 +18,20 @@ jobs:
       fail-fast: false # Keep running if one leg fails.
       matrix:
         k8s-version:
-        - v1.17.11
-        - v1.18.8
         - v1.19.1
 
         test-suite:
-        - ./test/conformance/runtime
-        - ./test/conformance/api/v1
-        - ./test/conformance/api/v1alpha1
-        - ./test/e2e
+        - ./test/e2e/autotls
 
         include:
           # Map between K8s and KinD versions.
           # This is attempting to make it a bit clearer what's being tested.
           # See: https://github.com/kubernetes-sigs/kind/releases/tag/v0.9.0
-        - k8s-version: v1.17.11
-          kind-version: v0.9.0
-          kind-image-sha: sha256:5240a7a2c34bf241afb54ac05669f8a46661912eab05705d660971eeb12f6555
-          kingress: istio
-          cluster-suffix: c${{ github.run_id }}.local
-        - k8s-version: v1.18.8
-          kind-version: v0.9.0
-          kind-image-sha: sha256:f4bcc97a0ad6e7abaf3f643d890add7efe6ee4ab90baeb374b4f41a4c95567eb
-          kingress: kourier
-          cluster-suffix: c${{ github.run_id }}.local
         - k8s-version: v1.19.1
           kind-version: v0.9.0
           kind-image-sha: sha256:98cf5288864662e37115e362b23e4369c8c4a408f99cbc06e58ac30ddc721600
           kingress: contour
           cluster-suffix: c${{ github.run_id }}.local
-
-          # The tests in api/v1alpha1 require the --enable-alpha flag to be set,
-          # and alpha components to be deployed.
-        - test-suite: ./test/conformance/api/v1alpha1
           test-flags: "--enable-alpha"
 
     env:
@@ -273,6 +254,8 @@ jobs:
         IPS=( $(kubectl get nodes -lkubernetes.io/hostname!=kind-control-plane -ojsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}') )
 
         # Run the tests tagged as e2e on the KinD cluster.
-        go test -race -count=1 -timeout=20m -tags=e2e ${{ matrix.test-suite }} \
+        go test -v -race -count=1 -timeout=20m -tags=e2e \
+           ${{ matrix.test-suite }} \
            --ingressendpoint="${IPS[0]}" \
-           ${{ matrix.test-flags }}
+           ${{ matrix.test-flags }} \
+           -run ^TestDomainMappingAutoTLS$
